# hilspy

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  pr-labeler.yml  release.yml  scheduled-test.yml
examples/: setup_v4l2_example.py
src/hilspy/: __init__.py
src/hilspy/camera/: __init__.py  v4l2_camera.py
src/hilspy/setup/: v4l2_setup.py
src/hilspy/setup/playbooks/: setup-v4l2.yml
src/hilspy/velodyne/: __init__.py  velodyne_lidar.py  vlp16.py
test/: test_ansible_setup.py  test_velodyne.py  test_vlp16.py
