[project]
name = "hilspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioquic>=1.3.0",
]

[project.scripts]
velodyne-forwarder = "hilspy.velodyne.velodyne_lidar:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
