[project]
name = "hilspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioquic>=1.3.0",
    "av>=12.0.0",
    "v4l2-python3>=0.3.1",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "cryptography>=41.0.0",
]

[project.scripts]
velodyne-forwarder = "hilspy.velodyne.velodyne_lidar:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
